flowcontroller/yamls/networkpolicy-allow-kafka-to-kafka.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kafka-to-kafka
  annotations:
    flowDef:
      priority: 1
spec:
  policyTypes:
  - Ingress
  podSelector: 
    matchLabels:
      app: kafka
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: kafka
      namespaceSelector:
        matchLabels:
          name: ((/spec/namespace))
